use URI which return decoded query parameter directly